Migrate some Python code

--- a/local/templates/README.md.j2
+++ b/local/templates/README.md.j2
@@ -1,3 +1,6 @@
 {{python_readme_header_md}}
 
+This project does not require 100% unit test coverage for publishing (hence
+the name). **All other typical Python quality assurance is still enforced.**
+
 {{python_readme_dep_graph_md}}
